--- a/clientes/templates/person.html
+++ b/clientes/templates/person.html
@@ -15,7 +15,10 @@
             <ul class="list-group">
                 {% for person in persons %}
                     <li class="list-group-item">
-                        <a href="{% url 'persons_update' person.id %}">{{ person.first_name }}</a>
+                        {{ person.first_name }}
+                        <a href="{% url 'persons_update' person.id %}">
+                            <i class="fa fa-pencil" aria-hidden="true"></i>
+                        </a>
                         <a href="{% url 'persons_delete' person.id %}" class="trash-item">
                             <i class="fa fa-trash" aria-hidden="true"></i>
                         </a>
